--- a/setup.cfg
+++ b/setup.cfg
@@ -6,3 +6,8 @@ disallow_untyped_defs = true
 no_implicit_optional = true
 warn_redundant_casts = true
 warn_unused_ignores = true
+
+# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
+[flake8]
+max-line-length = 88
+extend-ignore = E203
