--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,6 +35,7 @@ repos:
         -   flake8-bugbear==21.11.29
         -   flake8-builtins==1.5.3
         -   flake8-comprehensions==3.7.0
+        -   flake8-simplify==0.14.2
         -   flake8-typing-imports==1.12.0
 -   repo: https://github.com/asottile/yesqa
     rev: v1.3.0
@@ -45,6 +46,7 @@ repos:
         -   flake8-bugbear==21.11.29
         -   flake8-builtins==1.5.3
         -   flake8-comprehensions==3.7.0
+        -   flake8-simplify==0.14.2
         -   flake8-typing-imports==1.12.0
 -   repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.930
