--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,7 @@ repos:
     rev: v3.0.1
     hooks:
     -   id: reorder-python-imports
-        args: [--py37-plus]
+        args: [--py37-plus, --add-import, 'from __future__ import annotations']
 -   repo: https://github.com/psf/black
     rev: 22.3.0
     hooks:
